# mesher-marching-cubes

basic_marching_cubes/: CMakeLists.txt  README.md  main.cpp  marching_cubes.cpp  marching_cubes.h  marching_cubes_cuda.cu  tsdf.7z  vec.h
marching_tetra_tsdf/: CMakeLists.txt  README.md  isosurface2.cpp  isosurface2.h  main_mt.cpp  point3d.cpp  point3d.h  triangle.cpp  triangle.h  tuple3d.cpp  tuple3d.h
